--- a/src/main.css
+++ b/src/main.css
@@ -21,7 +21,6 @@
   font-family: "montserrat", sans-serif;
 }
 
-
 input:not([type="radio"]):not([type="checkbox"]),
 button {
   appearance: none;
@@ -226,9 +225,82 @@ input:checked ~ .bubble::after {
 
 .todo-item .actions .delete {
   background-color: var(--danger);
+  margin-left: 3rem;
 }
 
 .todo-item.done .todo-content input {
   text-decoration: line-through;
   color: var(--grey);
+}
+
+.status {
+  border: 1px solid #48484b;
+  border-radius: 13px;
+}
+
+.status-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+  grid-column-gap: 1rem;
+}
+.status-select {
+  border: none;
+  color: #0000003d;
+}
+
+.status-select:hover {
+  cursor: pointer;
+  color: #48484b;
+  transition: 0.2s ease-in-out;
+}
+
+.completed-text {
+  color: green;
+  background: #4caf50;
+  padding: 5px;
+  border-radius: 20px;
+}
+
+.working-text {
+  color: #e0f7fa;
+  background: linear-gradient(#a4aae4, #fb8236);
+  background-size: auto 200%;
+  background-position: 0 100%;
+  transition: background-position 0.3s;
+  padding: 5px;
+  border-radius: 20px;
+}
+
+.not-started-text {
+  color: #ffeb3be6;
+  background: #f44336;
+  padding: 5px;
+  border-radius: 20px;
+}
+
+/* speacial css */
+.rotate-vert-center {
+  animation: rotate-vert-center 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275)
+    both;
+}
+
+@keyframes rotate-vert-center {
+  0% {
+    transform: rotateY(0);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+.scale-up-center {
+  animation: scale-up-center 0.8s ease-out;
+}
+@keyframes scale-up-center {
+  0% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
